# rune-ui

./: .coverage  .gitignore  .grype.yaml  CONTRIBUTING.md  Dockerfile  ISSUE_1_DESIGN.md  LICENSE  NOTICE  README.md  pyproject.toml  requirements.txt
.github/: AGENT_INSTRUCTIONS.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  epic.yml  feature.yml
.github/workflows/: codeql.yml  project-backfill.yml  project-sync.yml  publish-pypi.yml  quality-gates.yml  release.yml
.vex/: permanent.openvex.json
app/: api_client.py  main.py
app/templates/: base.html  estimate_modal.html  job_tracker.html  report_view.html
charts/rune-ui/: Chart.yaml  README.md  values.yaml
charts/rune-ui/templates/: _helpers.tpl  deployment.yaml  runtime-class.yaml
docs/security/: gvisor-isolation.md
docs/uat/: preflight-alert.md
rune_ui/: api_client.py  main.py
rune_ui/static/: audit-viewer.css  audit-viewer.js  chain-dag.css  chain-dag.js  print.css  solarized-light.css  solarized.css
rune_ui/static/css/: rune-print.css  rune-tokens.css  solarized.css
rune_ui/templates/: audit.html  base.html  benchmarks.html  chain.html  chain_detail.html  compare.html  config.html  dashboard.html  error_modal.html  estimate_modal.html  finops.html  finops_results.html  interaction_form.html  interactive_terminal.html  report_view.html  reports.html  run_detail.html
static/: solarized.css
tests/: test_benchmark_wizard.py  test_config_settings.py  test_dashboard.py  test_interactive_terminal.py  test_ollama_integration.py  test_run_detail.py  test_ui.py  test_ui_extra.py
