[project]
name = "rune-ui"
version = "0.1.0"
description = "RUNE UI — The Face of the RUNE Ecosystem"
dependencies = [
    "fastapi",
    "uvicorn",
    "jinja2",
    "httpx",
    "python-dotenv",
    "python-multipart",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "bandit",
]

[tool.pytest.ini_options]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=97"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
