[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rune-ui"
version = "0.0.0a1"
description = "RUNE UI — The Face of the RUNE Ecosystem"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "jinja2",
    "httpx",
    "python-dotenv",
    "python-multipart",
]

[project.urls]
Homepage = "https://lpasquali.github.io/rune-docs/"
Documentation = "https://lpasquali.github.io/rune-docs/"
Repository = "https://github.com/lpasquali/rune-ui"
Issues = "https://github.com/lpasquali/rune-ui/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "bandit",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
rune_ui = ["templates/**/*.html", "static/**/*"]

[tool.setuptools.packages.find]
include = ["rune_ui*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: integration tests",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
